--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -1,89 +1,72 @@
-.sidebar {
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #181c2e;
-  position: fixed;
-  height: 100%;
-  overflow: hidden;
+.container {
+  display: flex;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  padding: .8em;
+  align-items: center;
+  margin-bottom: 1em
 }
 
-.sidebar div {
-  background: url(../../assets/cover.png);
-  background-color: #181c2e;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 150px;
-  padding-top: 30px;
+.label-avatar {
+  width: 280px;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
 }
 
-.sidebar div img {
+.label-avatar input {
+  display: none;
+}
+
+.label-avatar span {
+  z-index: 99;
+  position: absolute;
+  opacity: 0.7;
+  transition: all .5s;
+}
+
+.label-avatar span:hover {
+  opacity: 1;
+  transform: scale(1.4);
+}
+
+.form-profile img {
+  margin-bottom: 1em;
   border-radius: 50%;
-  display: block;
-  margin: auto;
-  width: 90px;
-  height: 90px;
-  -webkit-filter: drop-shadow(2px 3px 6px #121212);
-  filter: drop-shadow(2px 3px 6px #121212);
   object-fit: cover;
 }
 
-.sidebar a {
-  display: block;
-  color: rgba(255, 255, 255, 0.7);
-  padding: 16px;
-  text-decoration: none;
+.form-profile label {
+  margin-bottom: .5em;
+  font-size: 1.4em;
+}
+
+.form-profile input, textarea, select {
+  margin-bottom: 1em;
+  padding: .7em;
+  border: 0;
+  border-radius: 5px;
+  max-width: 600px;
+}
+
+.form-profile input:disabled {
+  cursor: not-allowed;
+}
+
+.form-profile button {
+  max-width: 600px;
+}
+
+.logout-btn {
+  padding: 8px 20px;
+  background-color: transparent;
+  border: 1px solid #121212;
+  border-radius: 5px;
+  font-size: 1.5em;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  transition: ease-in-out .4s;
-}
-
-.sidebar a:hover{
-  background-color: #121212;
-  color: #fff;
-}
-
-.sidebar a svg {
-  margin-right: .5em;
-}
-
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-
-  .sidebar a {
-    float: left;
-  }
-
-  .sidebar div {
-    float: left;
-    background: none;
-    height: 50px;
-    padding: 10px;
-    } 
-
-.sidebar div img {
-  width: 30px;
-  height: 30px;
-}
-
-  .sidebar a svg {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-
-  .sidebar a svg {
-    display: none;
-  }
 }
