--- a/src/pages/SignIn/styles.css
+++ b/src/pages/SignIn/styles.css
@@ -58,8 +58,8 @@ form button {
   height: 35px;
   border: 0;
   border-radius: 7px;
-  background-color: #AFFF04;
-  color: #000;
+  background-color: #121212;
+  color: #fff;
   font-size: 1em;
   transition: filter 0.2s;
   }
